<resources>
    <string name="app_name">project</string>
    <string name="hello_there">hello_there</string>
    <string name="email_address" />
    <string name="password" />
    <string name="need_help">need help</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirmed_password">confirmed_password</string>
    <string name="hello">hello_user</string>
    <string name="SIGN">sign_in</string>
    <string name="todo" />
    <string name="collection_users" />
</resources>
